[package]
name = "gml_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["gml", "parsing", "parser"]
description = "A fast and simple Graph Modeling Language (GML) parser"
repository = "https://github.com/zaporter/gml_parser"



[dependencies]
regex = "1"
pest="2.4"
pest_derive="2.4" 
